# luna_hydroponic_system

./: compose.yml  pyproject.toml
be_hydroponic_system/: Dockerfile  db.sqlite3  pyproject.toml
be_hydroponic_system/.github/workflows/: python-app.yml
be_hydroponic_system/config/: settings.py  urls.py
be_hydroponic_system/hydroponic_system/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
be_hydroponic_system/hydroponic_system/migrations/: 0001_initial.py  0002_alter_hydroponicsystem_description_measurement.py
fe_hydroponic_system/: README.md  package-lock.json  package.json
